--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
 
   mongo-express:
     image: mongo-express:latest
+    restart: always
     ports:
       - "8081:8081"
     environment:
