--- a/docker-nodeJs/Dockerfile
+++ b/docker-nodeJs/Dockerfile
@@ -1,7 +1,11 @@
 FROM node:slim
+
 WORKDIR /app
-COPY . /app
+
+COPY package*.json ./
 RUN npm install
+
+COPY . .
+
 EXPOSE 3000
 CMD ["node", "index.js"]
-
